k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-app
spec:
  tls:
    - hosts:
        - app.hay2010.com
      secretName: stock-app-tls-prod
  rules:
    - host: app.hay2010.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-app
                port:
                  number: 80
